# mkdocstrings-zig

./: .copier-answers.yml  .coverage-tmp.html  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  duties.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml  docs.yml  release.yml
changelog/: index.html
code_of_conduct/: index.html
config/: ruff.toml
contributing/: index.html
credits/: index.html
demo/: 404.html  index.html
demo/assets/: _mkdocstrings.css
demo/search/: search_index.json
license/: index.html
reference/api/: index.html  index.md
scripts/: get_version.py  make.py
search/: search_index.json
src/mkdocstrings_handlers/zig/: __init__.py
src/mkdocstrings_handlers/zig/_internal/: handler.py  zig_docs_extractor.py  zig_parser_minimal.py
src/mkdocstrings_handlers/zig/templates/material/: style.css
src/mkdocstrings_handlers/zig/templates/material/_base/: constant.html.jinja  data.html.jinja  docstring.html.jinja  function.html.jinja  module.html.jinja  struct.html.jinja
test_zig_project/: build.zig  build.zig.zon  main.py  mkdocs.yml  pyproject.toml
test_zig_project/docs/: index.md
test_zig_project/src/: main.zig  root.zig
tests/: test_zig_parser.py  test_zig_parser_minimal.py
usage/: index.html
usage/configuration/: index.html
usage/configuration/general/: index.html
usage/configuration/headings/: index.html
usage/customization/: index.html
(+10 files in other folders)
